# notaarguello_repo

./: .gitignore
drafts_and_playground/jupyter/: 20240302_graphs.ipynb  20240328_mac_screentime_db_reverse_engineering.ipynb  20240328_mac_screentime_playground.ipynb  20240618_parsing_geo_json.ipynb  pyproject.toml
python_projects/cookiecutter_templates/: README.MD
python_projects/cookiecutter_templates/project_generic/{{cookiecutter.project_name}}/: pyproject.toml
python_projects/cookiecutter_templates/project_generic/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: utils.py
python_projects/cookiecutter_templates/project_generic/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/value_items/: __init__.py  constants_and_defaults.py
python_projects/mac_and_iphone_screentime_exporter/: .gitignore  pyproject.toml
python_projects/mac_and_iphone_screentime_exporter/mac_and_iphone_screentime_exporter/: __main__.py  cron_cmd.sh
python_projects/mac_and_iphone_screentime_exporter/mac_and_iphone_screentime_exporter/knowledgeC_queries/: daily_summary.sql  get_all_events.sql  screen_time_by_category_daily_totals.sql  screen_time_by_category_hourly_totals.sql
python_projects/mac_and_iphone_screentime_exporter/mac_and_iphone_screentime_exporter/services/: __init__.py  knowledgec_charts.py  knowledgec_full_update.py  sqlite_to_duckdb.py
python_projects/mac_and_iphone_screentime_exporter/mac_and_iphone_screentime_exporter/value_items/: __init__.py  constants_and_defaults.py
python_projects/mac_and_iphone_screentime_exporter/tests/: test_mac_and_iphone_screentime_exporter.py
python_projects/notme_py_lib/notme_py_lib/: pyproject.toml
python_tools/cookiecutter_templates/project_generic/: cookiecutter.json
sh_tools/: aliases.sh  cmd_load_git_helpers.sh  cmd_preformated_prs.sh  cmd_push_and_watch.sh  cmd_teammates_prs_to_obsidian.sh  cmd_watch_pr_and_open.sh  git_helpers.sh  obsidian_tools.sh  preformated_prs.sh  prerequisites.md
(+6 files in other folders)
