[tool.poetry]
name = "jupyter-playfground"
version = "0.1.0"
description = "Jupyter env for testing ideas"
authors = ["notaarguello <andresjarguello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.1"
pydantic = "^2.5.3"
PyYAML = "6.0.1"
jupyter = "^1.0.0"
ipython = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
