[tool.poetry]
name = "jupyter-playfground"
version = "0.1.0"
description = "Jupyter env for testing ideas"
authors = ["notaarguello <andresjarguello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.1"
pydantic = "^2.5.3"
PyYAML = "6.0.1"
jupyter = "^1.0.0"
ipython = "^7.0.0"
google-cloud-bigquery = "^3.18.0"
pytz = "^2024.1"
xmltodict= "^0.6.0"
pandas = "^2.2.1"
pandas-gbq = "^0.22.0"
duckdb = "^0.10.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
